--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@
   src: url("font/CircularStd-Medium.otf") format("opentype");
 }
 
+@font-face {
+  font-family: "Satoshi";
+  src: url("font/Satoshi-Medium.otf") format("opentype");
+}
+
 *{
   margin: 0px;
   padding: 0px;
@@ -26,7 +31,6 @@ body {
   flex-direction: column;
   min-height: 100vh; 
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
   background-color: var(--background-color);
 }
 
@@ -174,4 +178,18 @@ form > button:hover{
   width: 500px;
   padding: 15px;
   overflow: hidden;
+}
+
+.about{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding: 40px;
+  background-color: black;
+  color: var(--primary);
+}
+
+ p {
+  font-family: "Satoshi";
 }
