--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 /* index.css */
 
+@import url('style/homepage.css');
+@import url('style/register.css');
+@import url('style/customerhome.css');
+@import url('style/about.css');
+
+
 @font-face {
   font-family: "Circular";
   src: url("font/CircularStd-Medium.otf") format("opentype");
@@ -21,7 +27,7 @@
 html {
   height: 100%;
   --primary: #DFDCDC;
-  --background-color: #b9b9b9;
+  --background-color: #d5d5d5;
   --shadow-1: rgba(126, 125, 125, 0.127);
   --hover: #ff4500;
 }
@@ -32,164 +38,4 @@ body {
   min-height: 100vh; 
   margin: 0;
   background-color: var(--background-color);
-}
-
-nav {
-  background-color: #333;
-  padding: 10px;
-}
-
-nav a {
-  color: #fff;
-  text-decoration: none;
-  margin-right: 10px;
-}
-
-nav a:hover {
-  color: var(--hover);
-}
-
-.appContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.main-content{
-  color: white;
-  background-image: url('src/img/farmers.png');
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: 80%;
-  min-height: 100vh;
-  justify-content: center;
-  padding: 0px 80px 0px 80px;
-  text-shadow: 2px 2px 10px black;
-}
-
-.main-content h1{
-  font-size: 75px;
-  animation: 2s anim-lineUp ease-out;
-}
-
-.main-content > .welcome2{
-  font-size: 50px;
-}
-
-@keyframes anim-lineUp {
-  0% {
-    opacity: 0;
-    transform: translateY(80%);
-  }
-  20% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-    transform: translateY(0%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0%);
-  }
-}
-
-.main-content > button{
-  background-color: white;
-  font-weight: bold;
-  border-radius: 40px;
-  border-style: none;
-  height: 50px;
-  width: 150px;
-  margin-top: 20px;
-}
-
-.main-content > button:hover{
-  background-color: var(--hover);
-  color: white;
-}
-
-.login{
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  text-align: center;
-  justify-content: center;
-  width: 40%;
-  margin: 20px;
-}
-
-.logo-container {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-.logo-container img {
-  width: 20%;
-}
-
-form div{
-  margin: 10px 0px;
-}
-
-form input{
-  width: 100%;
-  padding: 12px 20px;
-  display: inline-block;
-  border: 1px solid grey;
-  border-radius: 40px;
-  box-sizing: border-box;
-}
-
-form > button {
-  background-color: black;
-  font-weight: bold;
-  border-radius: 40px;
-  border-style: none;
-  padding: 15px;
-  width: 100%;
-  color: white;
-  margin-bottom: 10px;
-}
-
-form > button:hover{
-  background-color: var(--hover);
-  color: black;
-}
-
-.register-main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: url('img/farmers-bg.png');
-  background-size: cover;
-  min-height: 100vh;
-}
-
-.register-card{
-  background-color: var(--background-color);
-  box-shadow: 0 4px 8px var(--shadow-1);
-  border-radius: 10px;
-  text-align: center;
-  justify-content: center;
-  width: 500px;
-  padding: 15px;
-  overflow: hidden;
-}
-
-.about{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  padding: 40px;
-  background-color: black;
-  color: var(--primary);
-}
-
- p {
-  font-family: "Satoshi";
 }
