ui: view product listing for customer

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @import url('style/register.css');
 @import url('style/customerhome.css');
 @import url('style/about.css');
-
+@import url('style/customerproduct.css');
 
 @font-face {
   font-family: "Circular";
