--- a/src/style/customerhome.css
+++ b/src/style/customerhome.css
@@ -4,9 +4,13 @@
     justify-content: space-between; 
     align-items: center; 
     text-align: center;
-    padding: 20px 10px 10px 10px;
+    padding: 0px 70px;
     position: fixed;
     width: 100%;
+    background-image: url('../img/customerHeader.png');
+    background-position: center;
+    background-size: cover; 
+    height: 100px;
 }
 
 .navCustomer a {
@@ -18,7 +22,17 @@
     text-shadow: 2px 2px 10px black;
 }
 
-.navCustomer > button {
+.navUser {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navUser > * {
+    margin: 0px 20px;
+}
+
+.navUser > button {
     background-color: black;
     color: white;
     font-size: medium;
@@ -29,18 +43,13 @@
     box-shadow: 0 4px 8px var(--shadow-1);
 }
 
-.navCustomer > button:hover{
+.navUser > button:hover{
     background-color: var(--hover);
     color: black;
 }
 
-/* header */
-.imgCustomer {
-    background-image: url('../img/customerHeader.png');
-    background-position: center;
-    background-size: cover;
-    height: 200px;
-    background-color: aqua;
+.headerCustomer{
+    height: 100px;
 }
 
 .titleCustomer{
@@ -96,12 +105,12 @@ hr {
 }
 
 .customer-cards:hover > .icon{
-    transform: scale(1.3);
+    transform: scale(1.1);
 }
 
 /* news */
 .header {
-    font-size: xx-large;
+    font-size: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -120,13 +129,24 @@ hr {
 .news{
     background-color: rgba(238, 237, 237, 0.662);
     box-shadow: 0 4px 8px var(--shadow-1);
+    border-radius: 10px;
     width: 700px;
     height: 350px;
     margin: 20px;
-    padding: 50px;
+    padding: 10px 50px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
+    align-items: center;
+}
+
+.news > .title{
+    font-size: large;
+    font-weight: bold;
+    padding-bottom: 5px;
+}
+
+.news p {
     align-items: center;
 }
