ui: shopping cart

--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,10 @@
 @import url('style/about.css');
 @import url('style/customer/customerhome.css');
 @import url('style/customer/customerproduct.css');
+@import url('style/customer/customercart.css');
 @import url('style/admin/adminhome.css');
 @import url('style/admin/adminproduct.css');
+
 
 @font-face {
   font-family: "Circular";
