--- a/src/style/customer/customercart.css
+++ b/src/style/customer/customercart.css
@@ -11,6 +11,21 @@
     
 }
 
+.backBtn {
+    background-color: white;
+    border: 2px solid var(--hover);
+    font-size: smaller;
+    border-radius: 40px;
+    height: 30px;
+    width: 150px;
+    box-shadow: 0 2px 8px var(--shadow-1);
+    margin: 5px;  
+}
+
+.backBtn:hover{
+    background-color: var(--hover);
+}
+
 .checkOutbtn{
     background-color: var(--hover);
     font-size: smaller;
