--- a/src/style/customer/customerhome.css
+++ b/src/style/customer/customerhome.css
@@ -22,6 +22,12 @@
     text-decoration: none;
     color: white;
     text-shadow: 2px 2px 10px black;
+    transition: font-size 0.3s ease;
+}
+
+.navCustomer a:hover{
+    font-size: larger;
+    
 }
 
 .navUser {
