ui: customer profile

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 @import url('style/customer/customerproduct.css');
 @import url('style/customer/customercart.css');
 @import url('style/customer/customerorder.css');
+@import url('style/customer/customerprofle.css');
 @import url('style/admin/adminhome.css');
 @import url('style/admin/adminproduct.css');
 
