--- a/src/style/admin/adminproduct.css
+++ b/src/style/admin/adminproduct.css
@@ -3,20 +3,32 @@
     background-position: center;
     background-size: cover;
     height: 100px;
-    background-color: aqua;
 }
 
-.admin-product > h1{
+.titleAdmin h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 15px;
+    padding: 1px;
+    color: white;
+    text-shadow: 2px 2px 10px black;
 }
 
 .input-container {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url('/src/img/farmers-bg.png');
+    background-size: cover;
+    background-position: center;
+    min-height: 100vh;
 }
   
 #productInput{
