--- a/src/style/about.css
+++ b/src/style/about.css
@@ -3,9 +3,9 @@
     margin-left: 10px;
 }
 
-.navRoot{
+/* .navRoot{
     background-color: transparent;
-}
+} */
 
 .about{
     display: flex;
@@ -13,7 +13,7 @@
     justify-content: start;
     align-items: flex-start;
     min-height: 100vh;
-    background-image: url('/src/img/farmers.png');
+    /* background-image: url('/src/img/farmers.png'); */
     background-position: center;
     background-size: cover;
 }
