--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: "Circular";
-  src: url("font/CircularStd-Medium.otf") format("opentype");
+  src: url("font/CircularStd-Light.otf") format("opentype");
 }
 
 @font-face {
@@ -34,10 +34,12 @@
 
 html {
   height: 100%;
-  --primary: #DFDCDC;
-  --background-color: #ffffff;
+  --button1: #89B449;
+  --button2: #DBD468;
+  --button3: #E68A8C;
+  --background-color: #E7E0C4;
   --shadow-1: rgba(112, 112, 112, 0.704);
-  --hover: #ff4500;
+  --hover: #407F3E;
 }
 
 body {
