--- a/src/style/homepage.css
+++ b/src/style/homepage.css
@@ -16,54 +16,105 @@
     }
 }
 
+@keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+}
+
+/* navigation bar */
 .navRoot {
-    background-color: rgb(39, 39, 39);
     padding: 10px;
     z-index: 1;
     position: fixed;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.navRoot > a {
+.nav-item{
+    position: relative;
+    display: flex;
     text-decoration: none;
-    margin-right: 10px;
+    margin: 20px 50px;
     color: black;
+    justify-content: center;
+    align-items: center;
 }
 
-.navRoot a:hover{
+.nav-item::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 0;
+    height: 2px;
+    background-color: var(--hover);
+    transition: width 0.3s ease-in-out;
+}
+
+.nav-item:hover::after{
+    width: 100%;
+}
+
+.nav-item:hover{
     color: var(--hover);
+    border-radius: 10px;
+}
+
+.nav-item:focus{
+    color: var(--hover);
+}
+
+/* logo */
+.logoHeader {
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    left: 15px;
+    top: 15px;
 }
 
 .appContainer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
 }
 
-.main-content{
-    color: white;
-    background-image: url('src/img/farmers.png');
-    background-size: cover;
+/* home */
+#main-content{
+    color: black;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     flex-wrap: wrap;
     width: 80%;
     min-height: 100vh;
-    justify-content: center;
-    padding: 0px 80px 0px 80px;
-    text-shadow: 2px 2px 10px black;
+    min-width: 100vh;
+    align-items: center;
+    padding-left: 80px;
+    position: relative;
 }
 
-.main-content h1{
+#main-content h1{
     font-size: 75px;
     animation: 2s anim-lineUp ease-out;
 }
 
-.main-content > .welcome2{
+#main-content h2{
     font-size: 50px;
+    animation: 2s anim-lineUp ease-out;
 }
 
-.main-content > button{
+#main-content p{
+    animation: 2s anim-lineUp ease-out;
+    margin-right: 300px;
+}
+
+#main-content button{
     background-color: var(--hover);
     font-weight: bold;
     border-radius: 40px;
@@ -78,6 +129,19 @@
     color: white;
 }
 
+.main-content-text{
+    width: 75%;
+}
+
+.homeImg{
+    display: block;
+    animation: spin 10s linear infinite;
+    width: 45%;
+    position: absolute;
+    right: -150px;
+    transform: translateY(-50%);
+}
+
 .login{
     display: flex;
     flex-direction: column;
@@ -86,16 +150,6 @@
     justify-content: center;
     width: 40%;
     margin: 20px;
-}
-
-.logo-container {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
-}
-
-.logo-container img {
-    width: 20%;
 }
 
 form input{
