--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 @import url('style/admin/adminusers.css');
 @import url('style/admin/adminorder.css');
 @import url('style/admin/adminsale.css');
+@import url('style/footer.css');
 
 @font-face {
   font-family: "Circular";
