ui: login and register page

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @import url('style/homepage.css');
 @import url('style/register.css');
 @import url('style/about.css');
+@import url('style/login.css');
 @import url('style/customer/customerhome.css');
 @import url('style/customer/customerproduct.css');
 @import url('style/customer/customercart.css');
