--- a/src/style/homepage.css
+++ b/src/style/homepage.css
@@ -34,6 +34,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .nav-item{
@@ -44,6 +45,7 @@
     color: black;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .nav-item::after{
@@ -119,7 +121,7 @@
 .loginBtn{
     background-color: var(--button1);
     font-weight: bold;
-    border-radius: 40px;
+    border-radius: 10px;
     border-style: none;
     height: 50px;
     width: 150px;
@@ -142,6 +144,7 @@
     position: absolute;
     right: -150px;
     transform: translateY(-50%);
+    overflow: hidden;
 }
 
 /* Add these styles in your CSS file */
