--- a/src/style/about.css
+++ b/src/style/about.css
@@ -1,7 +1,6 @@
 .about{
-    margin-top: 70px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: start;
     align-items: flex-start;
     min-height: 100vh;
@@ -14,22 +13,58 @@ p {
     font-family: "Satoshi";
 }
 
-.about-main{
-    min-height: 100vh;
+.about-container{
+    margin-top: 70px;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.about-main{
+    display: flex;
     flex-direction: column;
+    justify-content: start;
     align-items: center;
-    /* background-color: black; */
+    text-align: center;
     color: black;
-    padding: 20px;
-    padding-top: 100px;
 }
 
 .about-main img{
     width: 50%;
 }
 
+.slider-frame {
+    width: 600px;
+    height: 400px; 
+    overflow: hidden;
+    position: relative;
+}
+
+.slide-images {
+    display: flex;
+    width: 2400px;
+    height: 400px;
+    animation: slide_animation 16s infinite;
+}
+
+.img-container {
+    padding: 20px;
+    min-width: 600px;
+    height: 400px;
+}
+
+.slide-images img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@keyframes slide_animation {
+    0% { transform: translateX(0); }
+    25% { transform: translateX(-600px); }
+    50% { transform: translateX(-1200px); }
+    75% { transform: translateX(-1800px); }
+    100% { transform: translateX(-2400px); }
+}
 .about-content{
     display: flex;
     flex-direction: row;
