--- a/src/style/customer/customerorder.css
+++ b/src/style/customer/customerorder.css
@@ -11,6 +11,7 @@
     box-shadow: 0 2px 8px var(--shadow-1);
     border-radius: 10px;
     width: 250px;
+    height: 300px;
     margin: 10px;
     padding: 15px;
     overflow: hidden;
