--- a/src/style/admin/adminorder.css
+++ b/src/style/admin/adminorder.css
@@ -1,18 +1,35 @@
 .orderTable {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  .orderTable th, .orderTable td {
-    border: 1px solid #dddddd;
-    padding: 8px;
-  }
-  
-  .orderTable th {
-    text-align: left;
-    background-color: #f2f2f2;
-  }
-  
-  .orderTable tr:nth-child(even) {
-    background-color: #dddddd;
-  }
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.orderTable th, .orderTable td {
+  border: 1px solid #dddddd;
+  padding: 8px;
+}
+
+.orderTable th {
+  text-align: left;
+  background-color: var(--button1);
+}
+
+.orderTable tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+.confirmBtn{
+  background-color: black;
+  color: white;
+  font-size: smaller;
+  border-radius: 40px;
+  border-style: none;
+  height: 30px;
+  width: 100px;
+  box-shadow: 0 1px 8px var(--shadow-1);
+  margin: 5px;
+}
+
+.confirmBtn:hover {
+  background-color: var(--hover);
+  color: white;
+}
