--- a/src/style/admin/adminhome.css
+++ b/src/style/admin/adminhome.css
@@ -14,6 +14,14 @@
     z-index: 1;
 }
 
+.navLinks {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    padding-left: 20px;
+    font-weight: bold;
+}
+
 .logo{
     width: 5%;
 }
@@ -28,9 +36,10 @@
 }
 
 .navUser > button {
-    background-color: var(--button3);
+    background-color: black;
     color: white;
     font-size: medium;
+    font-weight: bold;
     border-radius: 40px;
     border-style: none;
     height: 30px;
@@ -48,7 +57,8 @@
 }
 
 .headerAdmin{
-    height: 100px;
+    height: 85px;
+    background-color: #AFBC88;
 }
 
 .titleAdmin{
