ui: added design for order cards

--- a/src/style/customer/customerproduct.css
+++ b/src/style/customer/customerproduct.css
@@ -111,3 +111,36 @@
     background-color: var(--button2);
     color: black;
 }
+
+.order-cards {
+    display: flex;
+    align-items: center; 
+    background-color: #f0f0f0;
+    width: 600px;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .order-cards img {
+    width: 100px;
+    height: auto;
+    margin-left: 20px;
+    margin-right: 50px;
+  }
+  
+  .order-cards .details {
+    flex: 1;
+  }
+  
+  .order-cards h3 {
+    font-size: 1.2rem;
+    margin-bottom: 5px;
+  }
+  
+  .order-cards p {
+    font-size: 1rem;
+    margin-bottom: 5px;
+  }
+  
