ui: changed nav bar design

--- a/src/style/customer/customerhome.css
+++ b/src/style/customer/customerhome.css
@@ -11,7 +11,7 @@
 }
 
 .navUser > button {
-    background-color: var(--button2);
+    background-color: black;
     color: white;
     font-size: medium;
     border-radius: 40px;
@@ -26,13 +26,22 @@
     color: black;
 }
 
+.navLinks {
+    display: flex;
+    align-items: center;
+    flex-grow: 2;
+    padding-left: 20px ;
+    font-weight: bolder;
+}
+
 .profile:hover{
     transform: scale(1.1);
     transition: transform 0.3s ease;
 }
 
 .headerCustomer{
-    height: 100px;
+    height: 80px;
+    background-color: #AFBC88;
 }
 
 .titleCustomer{
