--- a/src/style/homepage.css
+++ b/src/style/homepage.css
@@ -33,7 +33,8 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    padding-left: 115px;
     flex-wrap: wrap;
 }
 
@@ -46,6 +47,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    font-weight: bolder;
 }
 
 .nav-item::after{
@@ -139,12 +141,13 @@
 
 .homeImg{
     display: block;
-    animation: spin 10s linear infinite;
+    animation: spin 20s linear infinite;
     width: 45%;
     position: absolute;
-    right: -150px;
+    right: -225px;
     transform: translateY(-50%);
     overflow: hidden;
+    
 }
 
 /* Add these styles in your CSS file */
