ui: fixed navbar

--- a/src/style/customer/customerhome.css
+++ b/src/style/customer/customerhome.css
@@ -2,8 +2,9 @@
 
 .navUser {
     display: flex;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
+    flex: 1;
 }
 
 .navUser > * {
@@ -29,10 +30,6 @@
 .profile:hover{
     transform: scale(1.1);
     transition: transform 0.3s ease;
-}
-
-.headerCustomer{
-    height: 100px;
 }
 
 .titleCustomer{
