--- a/src/style/homepage.css
+++ b/src/style/homepage.css
@@ -27,9 +27,16 @@
 
 /* navigation bar */
 .navRoot {
-    padding: 10px;
     z-index: 1;
-    position: fixed;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.navRootHome {
+    z-index: 1;
     width: 100%;
     display: flex;
     align-items: center;
@@ -46,6 +53,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    padding-top: 10px;
 }
 
 .nav-item::after{
