--- a/src/style/admin/adminhome.css
+++ b/src/style/admin/adminhome.css
@@ -17,8 +17,19 @@
 .navLinks {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    flex: 1;
     flex-grow: 1;
-    padding-left: 20px;
+    padding-left: 50px;
+    font-weight: bold;
+}
+
+.navLinksAdmin {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-grow: 1;
+    padding-left: 50px;
     font-weight: bold;
 }
 
