--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -17,7 +17,7 @@ hr {
     border: 0.1px solid var(--shadow-1);
 }
 
-.logo-container {
+.logoFooter {
     display: flex;
     flex-direction: row;
     flex: 2;
@@ -26,7 +26,7 @@ hr {
     margin-left: 50px;
 }
 
-.logo-container > p {
+.logoFooter > p {
     padding-left: 30px;
 }
 
