--- a/src/style/customer/customerhome.css
+++ b/src/style/customer/customerhome.css
@@ -20,6 +20,7 @@
     height: 30px;
     width: 100px;
     box-shadow: 0 4px 8px var(--shadow-1);
+    cursor: pointer;
 }
 
 .navUser > button:hover{
@@ -74,6 +75,7 @@
     height: 30px;
     width: 150px;
     box-shadow: 0 2px 10px var(--shadow-1);
+    cursor: pointer;
 }
 
 .customer-cards > button:hover{
