--- a/src/style/admin/adminhome.css
+++ b/src/style/admin/adminhome.css
@@ -1,4 +1,15 @@
 /* navigation bar */
+.navRootAdmin {
+    z-index: 1;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    background-color: #AFBC88;
+    padding-bottom: 10px;
+}
+
 .navAdmin{
     display: flex;
     justify-content: space-between; 
@@ -62,11 +73,6 @@
 .navUser > button:hover{
     background-color: var(--button2);
     color: black;
-}
-
-.headerAdmin{
-    height: 85px;
-    background-color: #AFBC88;
 }
 
 .titleAdmin{
