--- a/src/style/customer/customerproduct.css
+++ b/src/style/customer/customerproduct.css
@@ -55,6 +55,10 @@
     border: 2px solid var(--hover);
 }
 
+.sorting > .icon {
+    padding-right: 10px;
+}
+
 .product-container{
     display: flex;
     justify-content: center;
